# job-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: copilot.instructions.md
.github/workflows/: build-and-push.yml  deploy.yml
docker/: entrypoint.sh
migrations/versions/: 11cd04959dbd_.py  37b9862863dd_add_user_model.py
src/: app.py  models.py
src/services/: __init__.py  job_scraping.py  telegram.py
src/utils/: __init__.py
